@@ -5,17 +5,16 @@
  * @author Alex V. Alishevskikh, alex@openmechanics.net Copyright (c) 2003
  *         Memoranda Team. http://memoranda.sf.net
  */
-package main.java.memoranda;
+package memoranda;
 
-import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.Vector;
 
-import main.java.memoranda.date.CalendarDate;
-import main.java.memoranda.util.CurrentStorage;
-import main.java.memoranda.util.Util;
+import memoranda.date.CalendarDate;
+import memoranda.util.CurrentStorage;
+import memoranda.util.Util;
 
 import java.util.Map;
 import java.util.Collections;
@@ -47,7 +46,7 @@ public class EventsManager {
 	static {
 		CurrentStorage.get().openEventsManager();
 		if (_doc == null) {
-			_root = new Element("eventslist");
+			_root = new Element("eventsandnoteslist");
 /*			_root.addNamespaceDeclaration("jnevents", NS_JNEVENTS);
 			_root.appendChild(
 				new Comment("This is JNotes 2 data file. Do not modify.")); */
@@ -58,7 +57,7 @@ public class EventsManager {
 	}
 
 	public static void createSticker(String text, int prior) {
-		Element el = new Element("sticker");
+		Element el = new Element("note");
 		el.addAttribute(new Attribute("id", Util.generateId()));
 		el.addAttribute(new Attribute("priority", prior+""));
 		el.appendChild(text);
@@ -68,7 +67,7 @@ public class EventsManager {
 	@SuppressWarnings("unchecked")
 	public static Map getStickers() {
 		Map m = new HashMap();
-		Elements els = _root.getChildElements("sticker");
+		Elements els = _root.getChildElements("note");
 		for (int i = 0; i < els.size(); i++) {
 			Element se = els.get(i);
 			m.put(se.getAttribute("id").getValue(), se);
@@ -77,7 +76,7 @@ public class EventsManager {
 	}
 
 	public static void removeSticker(String stickerId) {
-		Elements els = _root.getChildElements("sticker");
+		Elements els = _root.getChildElements("note");
 		for (int i = 0; i < els.size(); i++) {
 			Element se = els.get(i);
 			if (se.getAttribute("id").getValue().equals(stickerId)) {
@@ -231,9 +230,9 @@ public class EventsManager {
 		Elements els = d.getElement().getChildElements("event");
 		for (int i = 0; i < els.size(); i++) {
 			Element el = els.get(i);
-			if ((new Integer(el.getAttribute("hour").getValue()).intValue()
+			if ((Integer.valueOf(el.getAttribute("hour").getValue())
 				== hh)
-				&& (new Integer(el.getAttribute("min").getValue()).intValue()
+				&& (Integer.valueOf(el.getAttribute("min").getValue())
 					== mm))
 				return new EventImpl(el);
 		}
@@ -266,14 +265,14 @@ public class EventsManager {
 
 	private static Year createYear(int y) {
 		Element el = new Element("year");
-		el.addAttribute(new Attribute("year", new Integer(y).toString()));
+		el.addAttribute(new Attribute("year", String.valueOf(y)));
 		_root.appendChild(el);
 		return new Year(el);
 	}
 
 	private static Year getYear(int y) {
 		Elements yrs = _root.getChildElements("year");
-		String yy = new Integer(y).toString();
+		String yy = String.valueOf(y);
 		for (int i = 0; i < yrs.size(); i++)
 			if (yrs.get(i).getAttribute("year").getValue().equals(yy))
 				return new Year(yrs.get(i));
@@ -299,13 +298,12 @@ public class EventsManager {
 		}
 
 		public int getValue() {
-			return new Integer(yearElement.getAttribute("year").getValue())
-				.intValue();
+			return Integer.valueOf(yearElement.getAttribute("year").getValue());
 		}
 
 		public Month getMonth(int m) {
 			Elements ms = yearElement.getChildElements("month");
-			String mm = new Integer(m).toString();
+			String mm = String.valueOf(m);
 			for (int i = 0; i < ms.size(); i++)
 				if (ms.get(i).getAttribute("month").getValue().equals(mm))
 					return new Month(ms.get(i));
@@ -315,7 +313,7 @@ public class EventsManager {
 
 		private Month createMonth(int m) {
 			Element el = new Element("month");
-			el.addAttribute(new Attribute("month", new Integer(m).toString()));
+			el.addAttribute(new Attribute("month", String.valueOf(m)));
 			yearElement.appendChild(el);
 			return new Month(el);
 		}
@@ -342,15 +340,14 @@ public class EventsManager {
 		}
 
 		public int getValue() {
-			return new Integer(mElement.getAttribute("month").getValue())
-				.intValue();
+			return Integer.valueOf(mElement.getAttribute("month").getValue());
 		}
 
 		public Day getDay(int d) {
 			if (mElement == null)
 				return null;
 			Elements ds = mElement.getChildElements("day");
-			String dd = new Integer(d).toString();
+			String dd = String.valueOf(d);
 			for (int i = 0; i < ds.size(); i++)
 				if (ds.get(i).getAttribute("day").getValue().equals(dd))
 					return new Day(ds.get(i));
@@ -360,18 +357,18 @@ public class EventsManager {
 
 		private Day createDay(int d) {
 			Element el = new Element("day");
-			el.addAttribute(new Attribute("day", new Integer(d).toString()));
+			el.addAttribute(new Attribute("day", String.valueOf(d)));
 			el.addAttribute(
 				new Attribute(
 					"date",
 					new CalendarDate(
 						d,
 						getValue(),
-						new Integer(
+						    Integer.valueOf(
 							((Element) mElement.getParent())
 								.getAttribute("year")
-								.getValue())
-							.intValue())
+								.getValue()))
+							//.intValue())
 						.toString()));
 
 			mElement.appendChild(el);
@@ -402,7 +399,7 @@ public class EventsManager {
 		}
 
 		public int getValue() {
-			return new Integer(dEl.getAttribute("day").getValue()).intValue();
+			return Integer.valueOf(dEl.getAttribute("day").getValue());
 		}
 
 		/*
