@@ -6,13 +6,13 @@
  * @author Alex V. Alishevskikh, alex@openmechanics.net
  * Copyright (c) 2003 Memoranda Team. http://memoranda.sf.net
  */
-package main.java.memoranda;
+package memoranda;
 
 import java.util.Collection;
 import java.util.Vector;
 
-import main.java.memoranda.date.CalendarDate;
-import main.java.memoranda.date.CurrentDate;
+import memoranda.date.CalendarDate;
+import memoranda.date.CurrentDate;
 
 import java.util.Calendar;
 
@@ -133,7 +133,7 @@ public class TaskImpl implements Task, Comparable {
     }
 
     /**s
-     * @see main.java.memoranda.Task#getStatus()
+     * @see memoranda.Task#getStatus()
      */
     public int getStatus(CalendarDate date) {
         CalendarDate start = getStartDate();
@@ -184,14 +184,14 @@ public class TaskImpl implements Task, Comparable {
     }
 
     /**
-     * @see main.java.memoranda.Task#getID()
+     * @see memoranda.Task#getID()
      */
     public String getID() {
         return _element.getAttribute("id").getValue();
     }
 
     /**
-     * @see main.java.memoranda.Task#getText()
+     * @see memoranda.Task#getText()
      */
     public String getText() {
         return _element.getFirstChildElement("text").getValue();
@@ -202,7 +202,7 @@ public class TaskImpl implements Task, Comparable {
     }
     
     /**
-     * @see main.java.memoranda.Task#setText()
+     * @see memoranda.Task#setText()
      */
     public void setText(String s) {
         _element.getFirstChildElement("text").removeChildren();
@@ -210,14 +210,14 @@ public class TaskImpl implements Task, Comparable {
     }
 
     /**
-     * @see main.java.memoranda.Task#freeze()
+     * @see memoranda.Task#freeze()
      */
     public void freeze() {
         setAttr("frozen", "yes");
     }
 
     /**
-     * @see main.java.memoranda.Task#unfreeze()
+     * @see memoranda.Task#unfreeze()
      */
     public void unfreeze() {
         if (this.isFrozen())
@@ -225,7 +225,7 @@ public class TaskImpl implements Task, Comparable {
     }
 
     /**
-     * @see main.java.memoranda.Task#getDependsFrom()
+     * @see memoranda.Task#getDependsFrom()
      */
     public Collection getDependsFrom() {
         Vector v = new Vector();
@@ -239,7 +239,7 @@ public class TaskImpl implements Task, Comparable {
         return v;
     }
     /**
-     * @see main.java.memoranda.Task#addDependsFrom(main.java.memoranda.Task)
+     * @see memoranda.Task#addDependsFrom(memoranda.Task)
      */
     public void addDependsFrom(Task task) {
         Element dep = new Element("dependsFrom");
@@ -247,7 +247,7 @@ public class TaskImpl implements Task, Comparable {
         _element.appendChild(dep);
     }
     /**
-     * @see main.java.memoranda.Task#removeDependsFrom(main.java.memoranda.Task)
+     * @see memoranda.Task#removeDependsFrom(memoranda.Task)
      */
     public void removeDependsFrom(Task task) {
         Elements deps = _element.getChildElements("dependsFrom");
@@ -260,29 +260,29 @@ public class TaskImpl implements Task, Comparable {
         }
     }
     /**
-     * @see main.java.memoranda.Task#getProgress()
+     * @see memoranda.Task#getProgress()
      */
     public int getProgress() {
-        return new Integer(_element.getAttribute("progress").getValue()).intValue();
+        return Integer.valueOf(_element.getAttribute("progress").getValue());
     }
     /**
-     * @see main.java.memoranda.Task#setProgress(int)
+     * @see memoranda.Task#setProgress(int)
      */
     public void setProgress(int p) {
         if ((p >= 0) && (p <= 100))
-            setAttr("progress", new Integer(p).toString());
+            setAttr("progress", String.valueOf(p));
     }
     /**
-     * @see main.java.memoranda.Task#getPriority()
+     * @see memoranda.Task#getPriority()
      */
     public int getPriority() {
         Attribute pa = _element.getAttribute("priority");
         if (pa == null)
             return Task.PRIORITY_NORMAL;
-        return new Integer(pa.getValue()).intValue();
+        return Integer.valueOf(pa.getValue());
     }
     /**
-     * @see main.java.memoranda.Task#setPriority(int)
+     * @see memoranda.Task#setPriority(int)
      */
     public void setPriority(int p) {
         setAttr("priority", String.valueOf(p));
@@ -316,7 +316,7 @@ public class TaskImpl implements Task, Comparable {
 	}
 
     /**
-     * @see main.java.memoranda.Task#getRate()
+     * @see memoranda.Task#getRate()
      */
 	 
      public long getRate() {
