@@ -1,4 +1,4 @@
-package main.java.memoranda.ui;
+package memoranda.ui;
 
 import java.awt.BorderLayout;
 import java.awt.Color;
@@ -28,9 +28,9 @@ import javax.swing.ListCellRenderer;
 import javax.swing.border.Border;
 import javax.swing.border.EmptyBorder;
 
-import main.java.memoranda.date.CalendarDate;
-import main.java.memoranda.util.Context;
-import main.java.memoranda.util.Local;
+import memoranda.date.CalendarDate;
+import memoranda.util.Context;
+import memoranda.util.Local;
 
 /*$Id: StickerDialog.java,v 1.5 2004/10/07 21:31:33 ivanrise Exp $*/
 public class StickerDialog extends JDialog {
@@ -210,8 +210,8 @@ public class StickerDialog extends JDialog {
 		header.setFont(new java.awt.Font("Dialog", 0, 20));
 		header.setForeground(new Color(0, 0, 124));
 		header.setText(Local.getString("Sticker"));
-		header.setIcon(new ImageIcon(main.java.memoranda.ui.StickerDialog.class.getResource(
-            "/ui/icons/sticker48.png")));
+		header.setIcon(new ImageIcon(memoranda.ui.StickerDialog.class.getResource(
+                "/ui/icons/sticker48.png")));
 		//header.setHorizontalAlignment(SwingConstants.LEFT);
 
 		jLabel1.setText(Local.getString("Sticker color")+": ");
@@ -247,7 +247,7 @@ public class StickerDialog extends JDialog {
 		jPanel1.add(priorityList);
 		
 		if (Context.get("STICKER_COLOR") != null) {
-			Color c = new Color(new Integer(Context.get("STICKER_COLOR").toString()).intValue());
+			Color c = new Color(Integer.valueOf(Context.get("STICKER_COLOR").toString()));
 			stickerText.setBackground(c);
 			int i = findColorIndex(c);
 			if (i > -1)
@@ -273,7 +273,7 @@ public class StickerDialog extends JDialog {
 			}
 		});
 		if (Context.get("TEXT_COLOR") != null) {
-			Color d = new Color(new Integer(Context.get("TEXT_COLOR").toString()).intValue());
+			Color d = new Color(Integer.valueOf(Context.get("TEXT_COLOR").toString()));
 			stickerText.setForeground(d);
 			int i = findColorIndex(d);
 			if (i > -1){
@@ -398,7 +398,7 @@ public class StickerDialog extends JDialog {
 			if (c != null)
 				stickerText.setBackground(c);
 		}
-		Context.put("STICKER_COLOR", new Integer(stickerText.getBackground().getRGB()));
+		Context.put("STICKER_COLOR", stickerText.getBackground().getRGB());
 	}
 	void textColor_actionPerformed(ActionEvent e) {
 		int i=textColor.getSelectedIndex();
@@ -423,7 +423,7 @@ public class StickerDialog extends JDialog {
 			if (c != null)
 				stickerText.setForeground(c);
 		}
-		Context.put("TEXT_COLOR", new Integer(stickerText.getForeground().getRGB()));		
+		Context.put("TEXT_COLOR", stickerText.getForeground().getRGB());		
 	}
 	protected void fontSize_actionPerformed(ActionEvent e) {
 		int i=fontSize.getSelectedIndex();
@@ -432,7 +432,7 @@ public class StickerDialog extends JDialog {
 			stickerText.setFont(new Font(f.getFontName(), f.PLAIN, (i*5)+10));
 		}
 		fontSize.setSelectedIndex(i);
-		Context.put("TEXT_SIZE", new Integer(stickerText.getFont().getSize()));		
+		Context.put("TEXT_SIZE", stickerText.getFont().getSize());		
 		}
 	class ComboBoxRenderer extends JLabel implements ListCellRenderer {
 		public ComboBoxRenderer() {
